--- a/app/ttvxs/CMakeLists.txt
+++ b/app/ttvxs/CMakeLists.txt
@@ -1,54 +1,21 @@
-#SET(TOOLCHAIN_PREFIX ~/gcc-arm-none-eabi-8-2018-q4-major)
 
-if ( ${CMAKE_SOURCE_DIR} STREQUAL ${CMAKE_BINARY_DIR} )
-    message( FATAL_ERROR "In-source builds not allowed. Please make a new directory (called a build directory) and run CMake from there. You may need to remove CMakeCache.txt." )
-endif()
-
-SET(MY_TOP_DIR ${CMAKE_SOURCE_DIR}/../..)
-SET(MY_EXT_DIR ${MY_TOP_DIR}/external)
-SET(MY_LIB_DIR ${MY_TOP_DIR})
-
-SET(FREERTOS_DIR ${MY_EXT_DIR}/FreeRTOS)
-
-SET(STM32_CHIP STM32F769NIH)
-SET(STM32Cube_DIR ${MY_EXT_DIR}/STM32Cube)
-SET(CMAKE_MODULE_PATH ${MY_TOP_DIR}/cmake)
-SET(CMAKE_TOOLCHAIN_FILE ${CMAKE_MODULE_PATH}/gcc_stm32.cmake)
-
-SET(STM32_MIN_HEAP_SIZE 0x20000)
-SET(STM32_MIN_STACK_SIZE 0x200)
-
-CMAKE_MINIMUM_REQUIRED(VERSION 3.12)
-cmake_policy(SET CMP0048 NEW)
+cmake_minimum_required(VERSION 3.12)
 
 # use one of: cru16, tdc64, tdc72, ttvxs
-set(BOARD "ttvxs" CACHE STRING "PCB variant")
-set_property(CACHE BOARD PROPERTY STRINGS cru16 tdc64 tdc72 ttvxs)
-message(STATUS "BOARD=${BOARD}")
+#set(BOARD "ttvxs" CACHE STRING "PCB variant")
+#set_property(CACHE BOARD PROPERTY STRINGS cru16 tdc64 tdc72 ttvxs)
+set(BOARD "ttvxs")
 
-PROJECT(${BOARD}_rtos VERSION 1.17 LANGUAGES C CXX)
-set (CMAKE_CXX_STANDARD 11)
-ENABLE_LANGUAGE(ASM)
+SET(BSP_DIR ${MY_TOP_DIR}/app/${BOARD}/src)
 
-# uncomment to build for old TTVXS v1.0
-#add_compile_definitions(TTVXS_1_0)
+SET(ELF ${BOARD}_rtos.elf)
 
-FIND_PACKAGE(CMSIS REQUIRED)
-FIND_PACKAGE(STM32HAL COMPONENTS adc dma eth flash fmc gpio i2c qspi rcc rtc sd sdram sdmmc smbus spi tim uart REQUIRED)
+BMC_TARGET_PRE(${ELF})
 
-SET(HAL_LL_COMPONENTS ${HAL_LL_COMPONENTS} gpio usart)
-file(GLOB_RECURSE HAL_LL_EXTRA_INCLUDES
-   ${STM32Cube_DIR}/Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_ll_*.h
-)
-file(GLOB_RECURSE HAL_LL_EXTRA_SOURCES
-   ${STM32Cube_DIR}/Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_ll_*.c
-)
+subdirs(${MY_LIB_DIR}/dev)
+subdirs(${MY_LIB_DIR}/drivers)
+subdirs(${MY_SRC_DIR})
 
-SET(STM32HAL_SOURCES ${STM32HAL_SOURCES} ${HAL_LL_EXTRA_SOURCES})
-
-SET(MY_SRC_DIR ${MY_TOP_DIR}/app/${BOARD}/src)
-
-add_compile_definitions(USE_FULL_LL_DRIVER)
 
 ### lwIP
 SET(LWIP_DIR ${MY_EXT_DIR}/lwip)
@@ -67,38 +34,42 @@ SET(LWIP_SOURCES
 
 add_library(lwip STATIC ${LWIP_SOURCES})
 STM32_SET_TARGET_PROPERTIES(lwip)
-target_include_directories(lwip PRIVATE
+target_include_directories(lwip PUBLIC
     ${LWIP_DIR}/src/include
 )
+TARGET_LINK_LIBRARIES(${ELF} lwip)
 
+set(BSP_INC_DIRS
+    ${BSP_DIR}
+    ${BSP_DIR}/bsp
+    ${BSP_DIR}/bsp/mx_init
+)
+
+# required for lwip
 include_directories(
     ${MY_SRC_DIR}/config
+    ${MY_TOP_DIR}/common
+    ${MY_TOP_DIR}/system
     ${MY_LIB_DIR}/eth
-    ${MY_LIB_DIR}/system
 )
 
-include_directories(
-    ${MY_SRC_DIR}/config
-    ${MY_SRC_DIR}
-    ${MY_LIB_DIR}/common
-    ${MY_LIB_DIR}/system/init
-)
+
 
 file(GLOB_RECURSE BSP_SRCS
-    ${MY_SRC_DIR}/bsp/*.*
-    ${MY_SRC_DIR}/bsp/mx_init/*.*
+    ${BSP_DIR}/bsp/*.*
+    ${BSP_DIR}/bsp/mx_init/*.*
     ${MY_LIB_DIR}/system/init/*.*
 )
 
-set(Dev_INC_DIRS
-    ${MY_LIB_DIR}/dev/ad9516
-    ${MY_LIB_DIR}/dev/ad9545
-    ${MY_LIB_DIR}/dev/fpga
-    ${MY_LIB_DIR}/dev/powermon
-    ${MY_LIB_DIR}/dev/ttvxs_auxpll
-    ${MY_LIB_DIR}/dev/ttvxs_clkmux
-    ${MY_LIB_DIR}/dev/ttvxs_vxsiic
-)
+#set(Dev_INC_DIRS
+#    ${MY_LIB_DIR}/dev/ad9516
+#    ${MY_LIB_DIR}/dev/ad9545
+#    ${MY_LIB_DIR}/dev/fpga
+#    ${MY_LIB_DIR}/dev/powermon
+#    ${MY_LIB_DIR}/dev/ttvxs_auxpll
+#    ${MY_LIB_DIR}/dev/ttvxs_clkmux
+#    ${MY_LIB_DIR}/dev/ttvxs_vxsiic
+#)
 file(GLOB_RECURSE Dev_SRCS
     ${MY_LIB_DIR}/dev/ad9516/*
     ${MY_LIB_DIR}/dev/ad9545/*
@@ -111,8 +82,8 @@ file(GLOB_RECURSE Dev_SRCS
 
 set(Drivers_INC_DIRS
     ${MY_LIB_DIR}/drivers
-    ${MY_LIB_DIR}/drivers/ina226
-    ${MY_LIB_DIR}/drivers/mcp23017
+#    ${MY_LIB_DIR}/drivers/ina226
+#    ${MY_LIB_DIR}/drivers/mcp23017
 )
 
 file(GLOB_RECURSE Drivers_SRCS
@@ -165,123 +136,39 @@ file(GLOB_RECURSE Drivers_SRCS
     ${MY_LIB_DIR}/drivers/rtc_util.h
 )
 
-add_library(hwlib STATIC ${BSP_SRCS} ${Dev_SRCS} ${Drivers_SRCS})
-target_include_directories(hwlib PUBLIC
-    ${Dev_INC_DIRS}
-    ${Drivers_INC_DIRS}
-)
-TARGET_INCLUDE_DIRECTORIES(hwlib PRIVATE
-    ${CMSIS_INCLUDE_DIRS}
-    ${STM32HAL_INCLUDE_DIR}
-    ${MY_SRC_DIR}/bsp
-    ${MY_SRC_DIR}/bsp/mx_init
-    ${MY_LIB_DIR}/init
-#    ${MY_LIB_DIR}/drivers
-)
-STM32_SET_TARGET_PROPERTIES(hwlib)
-
-add_library(CMSIS STATIC ${CMSIS_SOURCES})
-TARGET_INCLUDE_DIRECTORIES(CMSIS PRIVATE
-    ${CMSIS_INCLUDE_DIRS}
-)
-STM32_SET_TARGET_PROPERTIES(CMSIS)
-
-add_library(STM32HAL STATIC ${STM32HAL_SOURCES})
-TARGET_INCLUDE_DIRECTORIES(STM32HAL PUBLIC
-    ${CMSIS_INCLUDE_DIRS}
-    ${STM32HAL_INCLUDE_DIR}
-)
-STM32_SET_TARGET_PROPERTIES(STM32HAL)
-
-file(GLOB_RECURSE USER_SOURCES
+file(GLOB_RECURSE BmcApp_SRCS
+    ${BSP_SRCS}
+    ${Dev_SRCS}
+    ${Drivers_SRCS}
     ${MY_SRC_DIR}/config/*.*
     ${MY_LIB_DIR}/common/*.*
+    ${BSP_DIR}/*.*
     ${MY_SRC_DIR}/*.*
+    ${MY_SRC_DIR}/rtos/*.*
+    ${MY_SRC_DIR}/tasks/*.*
     ${MY_LIB_DIR}/eth/*.*
-    ${HAL_LL_EXTRA_INCLUDES}
 )
 
-SET(PROJECT_SOURCES
-    ${USER_SOURCES}
+file(GLOB_RECURSE PROJECT_SOURCES
+    ${BmcApp_SRCS}
+    ${MY_LIB_DIR}/system/init/*.*
 )
 
-file(GLOB_RECURSE FreeRTOS_SRCS
-    ${FREERTOS_DIR}/include/*.h
-    ${FREERTOS_DIR}/tasks.c
-    ${FREERTOS_DIR}/timers.c
-    ${FREERTOS_DIR}/queue.c
-    ${FREERTOS_DIR}/list.c
-    ${FREERTOS_DIR}/CMSIS_RTOS/cmsis_os.*
-    ${FREERTOS_DIR}/portable/GCC/ARM_CM7/r0p1/*.c
-    ${FREERTOS_DIR}/portable/MemMang/heap_4.c
-    ${FREERTOS_DIR}/event_groups.c
-)
-
-add_library(FreeRTOS STATIC ${FreeRTOS_SRCS})
-include_directories(
-    ${FREERTOS_DIR}/CMSIS_RTOS
-    ${FREERTOS_DIR}/include
-    ${FREERTOS_DIR}/portable/GCC/ARM_CM7/r0p1
-)
-target_include_directories(FreeRTOS PRIVATE
-    ${CMSIS_COMMON_INCLUDE_DIR}
-)
-
-set(DATA_FILE
-   ${MY_TOP_DIR}/doc/Doxyfile.in
-   ${MY_TOP_DIR}/mib/afi-bmc.mib
-   ${MY_TOP_DIR}/README.md
-   ${MY_SRC_DIR}/version.h.in
-)
-
-set(CMAKE_BUILD_TYPE Debug)
-#set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -u_printf_float")
-SET(ELF ${CMAKE_PROJECT_NAME}.elf)
-ADD_EXECUTABLE(${ELF}
+target_sources(${ELF} PRIVATE
     ${PROJECT_SOURCES}
-    ${DATA_FILE}
 )
 TARGET_INCLUDE_DIRECTORIES(${ELF} PRIVATE
-    ${STM32HAL_INCLUDE_DIR}
+#    ${STM32HAL_INCLUDE_DIR}
     ${LWIP_DIR}/src/include
-   ${MY_LIB_DIR}/common
-   ${MY_SRC_DIR}
-   ${MY_SRC_DIR}/bsp
-   ${MY_SRC_DIR}/bsp/mx_init
-   ${MY_SRC_DIR}/tasks
-   ${MY_SRC_DIR}/rtos
+    ${MY_LIB_DIR}/common
+    ${BSP_DIR}
+    ${BSP_DIR}/bsp
+    ${BSP_DIR}/bsp/mx_init
+    ${BSP_DIR}/tasks
+    ${BSP_DIR}/rtos
+    ${MY_SRC_DIR}
+    ${MY_SRC_DIR}/rtos
+    ${MY_SRC_DIR}/tasks
+    ${MY_LIB_DIR}/system/init
 )
-
-TARGET_LINK_LIBRARIES(${ELF}
-    hwlib
-    lwip
-    FreeRTOS
-    CMSIS
-    STM32HAL
-)
-STM32_SET_TARGET_PROPERTIES(${ELF})
-STM32_ADD_HEX_BIN_TARGETS(${ELF})
-STM32_ADD_DUMP_TARGET(${ELF})
-STM32_PRINT_SIZE_OF_TARGETS(${ELF})
-
-# Stack Smashing Protection
-SET(CMAKE_C_FLAGS  "${CMAKE_C_FLAGS} -fstack-protector-all -fstack-usage -Wstack-usage=250")
-# Extra warnings
-SET(CMAKE_C_FLAGS  "${CMAKE_C_FLAGS} -Wpedantic -Wextra -Wstrict-prototypes -Wdouble-promotion -Wswitch-enum -Wno-unused -Wno-unused-parameter")
-
-include(${MY_TOP_DIR}/cmake/Doxygen.cmake)
-include(${MY_TOP_DIR}/cmake/git_version.cmake)
-
-configure_file(
-  ${MY_SRC_DIR}/version.h.in
-  ${MY_SRC_DIR}/version.h
-)
-configure_file(
-  ${MY_TOP_DIR}/build_id.in
-  ${MY_TOP_DIR}/build_id
-)
-list(APPEND SOURCES ${MY_SRC_DIR}/version.h)
-
-add_custom_command(TARGET ${ELF} POST_BUILD
-    COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_FILE:${ELF}> ${CMAKE_PROJECT_NAME}-${GIT_DESCR}.elf
-)
+BMC_TARGET_POST(${ELF})
