fix eth include scope

--- a/app/cru16/CMakeLists.txt
+++ b/app/cru16/CMakeLists.txt
@@ -24,7 +24,6 @@ include_directories(
     ${MY_SRC_DIR}/config
     ${MY_TOP_DIR}/common
     ${MY_TOP_DIR}/system
-    ${MY_LIB_DIR}/eth
 )
 
 file(GLOB BSP_SRCS
@@ -42,6 +41,7 @@ file(GLOB Dev_SRCS
     ${MY_LIB_DIR}/dev/fpga/*
     ${MY_LIB_DIR}/dev/powermon/*
     ${MY_LIB_DIR}/dev/cru16_clkmux/*
+    ${MY_LIB_DIR}/dev/therm/*
     ${MY_LIB_DIR}/dev/vxsiics/*
 )
 
@@ -127,6 +127,7 @@ TARGET_INCLUDE_DIRECTORIES(${ELF} PRIVATE
     ${MY_LIB_DIR}/dev
     ${MY_LIB_DIR}/drivers
     ${MY_LIB_DIR}/system/init
+    ${MY_LIB_DIR}/eth
     ${MY_SRC_DIR}
     ${MY_SRC_DIR}/rtos
     ${MY_SRC_DIR}/tasks
