--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,3 @@
-#SET(TOOLCHAIN_PREFIX ~/gcc-arm-none-eabi)
 
 CMAKE_MINIMUM_REQUIRED(VERSION 3.12)
 cmake_policy(SET CMP0048 NEW)
@@ -8,6 +7,10 @@ if ( ${CMAKE_SOURCE_DIR} STREQUAL ${CMAKE_BINARY_DIR} )
 endif()
 
 set(CMAKE_BUILD_TYPE Debug)
+
+if(DEFINED ENV{TOOLCHAIN_PREFIX})
+    set(TOOLCHAIN_PREFIX=ENV{TOOLCHAIN_PREFIX})
+endif()
 
 SET(MY_TOP_DIR ${CMAKE_SOURCE_DIR})
 SET(MY_EXT_DIR ${MY_TOP_DIR}/external)
