wip: remove duplicates

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -65,7 +65,7 @@ file(GLOB HAL_LL_EXTRA_SOURCES
 SET(STM32HAL_SOURCES ${STM32HAL_SOURCES} ${HAL_LL_EXTRA_SOURCES})
 
 add_library(STM32HAL STATIC ${STM32HAL_SOURCES})
-TARGET_INCLUDE_DIRECTORIES(STM32HAL PUBLIC
+TARGET_INCLUDE_DIRECTORIES(STM32HAL PRIVATE
     ${CMSIS_INCLUDE_DIRS}
     ${STM32HAL_INCLUDE_DIR}
 )
