config_eeprom: use BusInterface

--- a/app/cru16/CMakeLists.txt
+++ b/app/cru16/CMakeLists.txt
@@ -48,6 +48,7 @@ file(GLOB Dev_SRCS
     ${MY_LIB_DIR}/dev/ad9545/*.c
     ${MY_LIB_DIR}/dev/cru16_clkmux/*.c
 #    ${MY_LIB_DIR}/dev/digipot/*.c
+    ${MY_LIB_DIR}/dev/eeprom_config/*.c
     ${MY_LIB_DIR}/dev/fpga/*.c
     ${MY_LIB_DIR}/dev/powermon/*.c
     ${MY_LIB_DIR}/dev/therm/*.c
@@ -62,6 +63,7 @@ file(GLOB Drivers_SRCS
     ${MY_LIB_DIR}/drivers/ad5141/*.c
     ${MY_LIB_DIR}/drivers/ad9516/*.c
     ${MY_LIB_DIR}/drivers/ad9545/*.c
+    ${MY_LIB_DIR}/drivers/at24c/*.c
     ${MY_LIB_DIR}/drivers/mcp23017/*.c
     ${MY_LIB_DIR}/drivers/bus/*.c
     ${MY_LIB_DIR}/drivers/bus/impl/*.c
