--- a/app/ttvxs/CMakeLists.txt
+++ b/app/ttvxs/CMakeLists.txt
@@ -49,6 +49,7 @@ file(GLOB Dev_SRCS
 #    ${MY_LIB_DIR}/dev/digipot/*.c
     ${MY_LIB_DIR}/dev/eeprom_config/*.c
     ${MY_LIB_DIR}/dev/fpga/*.c
+    ${MY_LIB_DIR}/dev/max31725/*.c
     ${MY_LIB_DIR}/dev/powermon/*.c
     ${MY_LIB_DIR}/dev/therm/*.c
     ${MY_LIB_DIR}/dev/ttvxs_clkmux/*.c
@@ -65,6 +66,7 @@ file(GLOB Drivers_SRCS
     ${MY_LIB_DIR}/drivers/ad9545/*.c
     ${MY_LIB_DIR}/drivers/at24c/*.c
     ${MY_LIB_DIR}/drivers/mcp23017/*.c
+    ${MY_LIB_DIR}/drivers/max31725/*.c
     ${MY_LIB_DIR}/drivers/bus/*.c
     ${MY_LIB_DIR}/drivers/bus/impl/*.c
     ${MY_LIB_DIR}/drivers/debug_helpers.c
