--- a/app/cru16/CMakeLists.txt
+++ b/app/cru16/CMakeLists.txt
@@ -51,6 +51,7 @@ file(GLOB Dev_SRCS
 #    ${MY_LIB_DIR}/dev/digipot/*.c
     ${MY_LIB_DIR}/dev/eeprom_config/*.c
     ${MY_LIB_DIR}/dev/fpga/*.c
+    ${MY_LIB_DIR}/dev/max31725/*.c
     ${MY_LIB_DIR}/dev/powermon/*.c
     ${MY_LIB_DIR}/dev/therm/*.c
     ${MY_LIB_DIR}/dev/vxsiics/*.c
@@ -66,6 +67,7 @@ file(GLOB Drivers_SRCS
     ${MY_LIB_DIR}/drivers/ad9545/*.c
     ${MY_LIB_DIR}/drivers/at24c/*.c
     ${MY_LIB_DIR}/drivers/mcp23017/*.c
+    ${MY_LIB_DIR}/drivers/max31725/*.c
     ${MY_LIB_DIR}/drivers/bus/*.c
     ${MY_LIB_DIR}/drivers/bus/impl/*.c
     ${MY_LIB_DIR}/drivers/debug_helpers.c
