--- a/app/tdc72/CMakeLists.txt
+++ b/app/tdc72/CMakeLists.txt
@@ -88,6 +88,7 @@ file(GLOB_RECURSE Src_HEADERS
 )
 
 file(GLOB Src_SOURCES
+    ${MY_SRC_DIR}/app/*.c
     ${MY_SRC_DIR}/common/*.c
     ${MY_SRC_DIR}/common/log/*.c
     ${MY_SRC_DIR}/config/*.c
@@ -131,6 +132,7 @@ TARGET_INCLUDE_DIRECTORIES(${ELF} PRIVATE
     ${MY_LIB_DIR}/dev
     ${MY_LIB_DIR}/dev/common
     ${MY_LIB_DIR}/drivers
+    ${MY_SRC_DIR}/app
     ${MY_SRC_DIR}/common
 #    ${MY_SRC_DIR}/eth
     ${MY_SRC_DIR}/rtos
