--- a/app/ttvxs/CMakeLists.txt
+++ b/app/ttvxs/CMakeLists.txt
@@ -106,6 +106,7 @@ file(GLOB_RECURSE Src_HEADERS
 )
 
 file(GLOB Src_SOURCES
+    ${MY_SRC_DIR}/app/*.c
     ${MY_SRC_DIR}/common/*.c
     ${MY_SRC_DIR}/common/log/*.c
     ${MY_SRC_DIR}/config/*.c
@@ -146,6 +147,7 @@ TARGET_INCLUDE_DIRECTORIES(${ELF} PRIVATE
     ${MY_LIB_DIR}/dev
     ${MY_LIB_DIR}/dev/common
     ${MY_LIB_DIR}/drivers
+    ${MY_SRC_DIR}/app
     ${MY_SRC_DIR}/common
     ${MY_SRC_DIR}/eth
     ${MY_SRC_DIR}/rtos
