refactor clkmux display

--- a/app/cru16/CMakeLists.txt
+++ b/app/cru16/CMakeLists.txt
@@ -48,6 +48,7 @@ file(GLOB Dev_SRCS
     ${MY_LIB_DIR}/dev/ad9545/*.c
     ${MY_LIB_DIR}/dev/adt7301/*.c
     ${MY_LIB_DIR}/dev/common/*.c
+    ${MY_LIB_DIR}/dev/clkmux/*.c
     ${MY_LIB_DIR}/dev/cru16_clkmux/*.c
     ${MY_LIB_DIR}/dev/digipot/*.c
     ${MY_LIB_DIR}/dev/eeprom_config/*.c
