--- a/doc/Doxyfile.in
+++ b/doc/Doxyfile.in
@@ -796,7 +796,12 @@ INPUT                  = \
     @CMAKE_CURRENT_SOURCE_DIR@/Src/ \
     @CMAKE_CURRENT_SOURCE_DIR@/common/ \
     @CMAKE_CURRENT_SOURCE_DIR@/app/ \
+    @CMAKE_CURRENT_SOURCE_DIR@/dev/ \
     @CMAKE_CURRENT_SOURCE_DIR@/drivers/ \
+    @CMAKE_CURRENT_SOURCE_DIR@/external/STM32Cube/STM32Cube/Drivers/CMSIS/Include/ \
+    @CMAKE_CURRENT_SOURCE_DIR@/external/STM32Cube/Drivers/CMSIS/Device/ST/STM32F7xx/ \
+    @CMAKE_CURRENT_SOURCE_DIR@/external/STM32Cube/Drivers/STM32F7xx_HAL_Driver/ \
+    @CMAKE_CURRENT_SOURCE_DIR@/src/ \
     @CMAKE_CURRENT_SOURCE_DIR@/../doc
 
 # This tag can be used to specify the character encoding of the source files
