set version by git tag, improved git output parsing

--- a/src/version.h.in
+++ b/src/version.h.in
@@ -36,15 +36,21 @@
 #define APP_NAME_STR "TTVXS BMC"
 #endif
 
-#define VERSION_MAJOR_NUM @PROJECT_VERSION_MAJOR@
-#define VERSION_MINOR_NUM @PROJECT_VERSION_MINOR@
-#define GIT_BRANCH @GIT_BRANCH@
-#define GIT_COMMIT_HASH @GIT_COMMIT_HASH@
-#define GIT_DESCR @GIT_DESCR@
+#define VERSION_MAJOR_NUM @GIT_TAG_MAJOR_NUM@
+#define VERSION_MINOR_NUM @GIT_TAG_MINOR_NUM@
+#define VERSION_PATCH_NUM @GIT_COMMIT_COUNT@
+//#define VERSION_STR "@GIT_DESCR@"
+
 #define xstr(s) str(s)
 #define str(s) #s
+#define VERSION_STR xstr(VERSION_MAJOR_NUM) "." xstr(VERSION_MINOR_NUM)
 
-#define VERSION_STR xstr(VERSION_MAJOR_NUM) "." xstr(VERSION_MINOR_NUM) " (" xstr(GIT_DESCR) ")"
+#if VERSION_PATCH_NUM
+#define VERSION_STR xstr(VERSION_MAJOR_NUM) "." xstr(VERSION_MINOR_NUM) "-" xstr(VERSION_PATCH_NUM)
+#else
+#define VERSION_STR xstr(VERSION_MAJOR_NUM) "." xstr(VERSION_MINOR_NUM)
+#endif
+
 
 #ifdef __cplusplus
 }
