--- a/app/tdc72/CMakeLists.txt
+++ b/app/tdc72/CMakeLists.txt
@@ -7,7 +7,18 @@ SET(BSP_DIR ${MY_TOP_DIR}/app/tdc/src)
 
 SET(ELF ${BOARD}_rtos.elf)
 
+set(cpu 769ni)
+
+include(${MY_TOP_DIR}/cmake/gcc_stm32.cmake)
+include(${MY_TOP_DIR}/cmake/bmc_target.cmake)
+FIND_PACKAGE(CMSIS REQUIRED)
+
 BMC_TARGET_PRE(${ELF})
+
+TARGET_INCLUDE_DIRECTORIES(${ELF} INTERFACE
+    ${CMSIS_INCLUDE_DIRS}
+)
+TARGET_LINK_LIBRARIES(${ELF} lwip-${cpu})
 
 #subdirs(${MY_LIB_DIR}/dev)
 #subdirs(${MY_LIB_DIR}/drivers)
